博客地址修改

--- a/index.html
+++ b/index.html
@@ -285,6 +285,6 @@ pre code {
 </style>
 </head>
 <body class='typora-export'>
-<div id='write'  class=''><p><a href='https://dongjiawang.top/blog'><span>我的博客https://dongjiawang.top/blog</span></a></p><p>&nbsp;</p></div>
+<div id='write'  class=''><p><a href='https://www.dongjiawang.top/blog'><span>我的博客https://www.dongjiawang.top/blog</span></a></p><p>&nbsp;</p></div>
 </body>
 </html>
